--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.0.1",
     "formik": "^2.4.6",
@@ -19,7 +18,8 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.12.2",
     "swiper": "^11.1.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
