--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.0.1",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
