--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.0.1",
     "date-fns": "^3.6.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
