--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "nodemailer": "^6.9.14",
-    "ws": "^8.18.0",
-    "socket.io": "^4.7.5"
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.7.5",
+    "ws": "^8.18.0"
   }
 }
