--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.2",
     "swiper": "^11.1.4",
