--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^3.6.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
