--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
