--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.7",
     "socket.io": "^4.7.5",
