--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,11 +17,13 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.2",
     "swiper": "^11.1.4",
