--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongoose": "^8.5.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
