--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.7",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.8.1",
     "ws": "^8.18.0"
   }
 }
