--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
