--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "mongoose": "^8.5.0",
