--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
