--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -56,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.24.7"
+    "@babel/plugin-transform-react-jsx": "^7.24.7",
+    "cypress": "^14.4.0"
   }
 }
