--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.7",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.8.1",
+    "winston": "^3.17.0",
     "ws": "^8.18.0"
   }
 }
