--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.12.2",
     "swiper": "^11.1.4",
