--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.5.0",
+    "multer": "^2.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.7",
