--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^5.2.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.6",
     "date-fns": "^3.6.0",
@@ -14,9 +15,10 @@
     "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "lightweight-charts": "^4.2.3",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
